Dashboard: Alert table head alignment issue fixed

--- a/src/assets/scss/base/_table.scss
+++ b/src/assets/scss/base/_table.scss
@@ -33,12 +33,11 @@
             border-top: none !important;
             outline: 0;
             &[aria-sort] {
-                position: relative;
-                cursor: pointer;
                 &:after {
                     content: '\E904';
                     font-family: 'icomoon';
                     padding-left: 8px;
+                    vertical-align: middle;
                 }
             }
             &:first-child {
